syntax = "proto3";
 
option go_package="./;causalrpc";

/* 
    this rpc is only for causal consistency between nodes
*/

service CAUSAL {
  rpc AppendEntriesInCausal (AppendEntriesInCausalRequest) 
  returns (AppendEntriesInCausalResponse) {}
}
 
message AppendEntriesInCausalRequest{
  bytes      map_lattice = 1;
}

message AppendEntriesInCausalResponse{
  bool       success = 1;
}